--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,4 +55,8 @@
     <div class="col-md-1"></div>
 </div>
 
+
+<ngx-spinner name="s1" type="ball-scale-multiple"></ngx-spinner>
+<ngx-spinner name="s2" type="ball-scale-multiple"></ngx-spinner>
+<ngx-spinner name="s3" type="ball-spin-clockwise-fade-rotating"></ngx-spinner>
   
