--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,7 @@
 </div>
 
 
-<ngx-spinner name="s1" type="ball-scale-multiple"></ngx-spinner>
+<ngx-spinner name="s1" type="ball-atom"></ngx-spinner>
 <ngx-spinner name="s2" type="ball-scale-multiple"></ngx-spinner>
 <ngx-spinner name="s3" type="ball-spin-clockwise-fade-rotating"></ngx-spinner>
   
